[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/sprites/spaceship1-1.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/bg/background starts.png" type="Texture" id=3]
[ext_resource path="res://assets/bg/background.png" type="Texture" id=4]
[ext_resource path="res://scripts/Back.gd" type="Script" id=5]
[ext_resource path="res://sounds/fx/laser1.wav" type="AudioStream" id=6]
[ext_resource path="res://scenes/UI.tscn" type="PackedScene" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 9.05539

[sub_resource type="CircleShape2D" id=2]
radius = 7.0

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource( 2 )

[node name="BulletSpawner" type="Node2D" parent="."]
position = Vector2( 0, -7 )

[node name="BulletSpawner2" type="Node2D" parent="."]
position = Vector2( -5, -7 )

[node name="BulletSpawner3" type="Node2D" parent="."]
position = Vector2( 6, -7 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -100

[node name="Back" type="Node2D" parent="CanvasLayer"]
script = ExtResource( 5 )

[node name="Back1" type="Sprite" parent="CanvasLayer/Back"]
texture = ExtResource( 4 )
centered = false

[node name="Back2" type="Sprite" parent="CanvasLayer/Back"]
texture = ExtResource( 3 )
centered = false

[node name="Back3" type="Sprite" parent="CanvasLayer/Back"]
position = Vector2( 0, -320 )
texture = ExtResource( 4 )
centered = false

[node name="Back4" type="Sprite" parent="CanvasLayer/Back"]
position = Vector2( 0, -320 )
texture = ExtResource( 3 )
centered = false

[node name="UI" type="CanvasLayer" parent="."]

[node name="UI" parent="UI" instance=ExtResource( 7 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -6 )
texture = ExtResource( 1 )

[node name="AttackTimer" type="Timer" parent="."]
autostart = true

[node name="BulletSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "SFX"

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, -4 )
shape = SubResource( 2 )

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
